# jurneego-assignment

./: .env.example  .gitignore  AI_USAGE.md  ARCHITECTURE.md  CODE_WALKTHROUGH.md  Dockerfile  Makefile  README.md  TRADEOFFS.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  auth.py  config.py  database.py  main.py
app/api/: conversations.py  messages.py  moderation.py
app/models/: __init__.py  conversation.py  flag.py  message.py
app/prompts/: system_prompt.txt
app/schemas/: __init__.py  conversation.py  flag.py  message.py
app/services/: __init__.py  ai_service.py  conversation_service.py  safety_service.py
childAI/: .gitignore  ANTIGRAVITY_IMPLEMENTATION_AUDIT.md  NODEJS_PORT_PLAN.md  walkthrough.md
childAI/[JG]-landing-page/: .gitignore  jurneego-redesign-v2.html  jurneego-redesign-v3.html  jurneego-redesign-v4.html
childAI/design-system/jurneego/: MASTER.md
childAI/docs/: onyx-comparison.md
childAI/frontend/: callback.html  dashboard-chatter.html  dashboard-parent.html  dashboard-teacher.html  index.html  onyx-launcher.html
childAI/frontend/js/: api.js  auth.js  chatter.js  parent.js  teacher.js
childAI/nodejs-app/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
childAI/nodejs-app/src/: app.ts  server.ts
docs/: AI_USAGE.md  ARCHITECTURE.md  TRADEOFFS.md  async-vs-sync-explained.md
tests/integration/: test_api.py
tests/unit/: test_ai_service.py  test_safety_service.py
(+101 files in other folders)
